--- a/jans-config-api/server/src/main/resources/config-api-rs-protect.json
+++ b/jans-config-api/server/src/main/resources/config-api-rs-protect.json
@@ -3191,6 +3191,158 @@
           ]
         }
       ]
+    },
+    {
+      "path": "/jans-config-api/api/v1/token",
+      "conditions": [
+        {
+          "httpMethods": [
+            "GET"
+          ],
+          "scopes": [
+            {
+              "inum": "1800.01.87",
+              "name": "https://jans.io/oauth/config/token.readonly"
+            }
+          ],
+          "groupScopes": [
+            {
+              "inum": "1800.01.88",
+              "name": "https://jans.io/oauth/config/token.write"
+            }
+          ],
+          "superScopes": [
+            {
+              "inum": "1800.03.1",
+              "name": "https://jans.io/oauth/config/read-all"
+            }
+          ]
+        },
+        {
+          "httpMethods": [
+            "PATCH",
+            "POST",
+            "PUT"
+          ],
+          "scopes": [
+            {
+              "inum": "1800.01.88",
+              "name": "https://jans.io/oauth/config/token.write"
+            }
+          ],
+          "groupScopes": [
+            {
+              "inum": "1800.02.2",
+              "name": "https://jans.io/oauth/config/openid-write"
+            }
+          ],
+          "superScopes": [
+            {
+              "inum": "1800.03.2",
+              "name": "https://jans.io/oauth/config/write-all"
+            }
+          ]
+        },
+        {
+          "httpMethods": [
+            "DELETE"
+          ],
+          "scopes": [
+            {
+              "inum": "1800.01.89",
+              "name": "https://jans.io/oauth/config/token.delete"
+            }
+          ],
+          "groupScopes": [
+            {
+              "inum": "1800.02.3",
+              "name": "https://jans.io/oauth/config/openid-delete"
+            }
+          ],
+          "superScopes": [
+            {
+              "inum": "1800.03.3",
+              "name": "https://jans.io/oauth/config/delete-all"
+            }
+          ]
+        }
+      ]
+    },
+    {
+      "path": "/jans-config-api/api/v1/session",
+      "conditions": [
+        {
+          "httpMethods": [
+            "GET"
+          ],
+          "scopes": [
+            {
+              "inum": "1800.01.90",
+              "name": "https://jans.io/oauth/config/session.readonly"
+            }
+          ],
+          "groupScopes": [
+            {
+              "inum": "1800.01.91",
+              "name": "https://jans.io/oauth/config/session.write"
+            }
+          ],
+          "superScopes": [
+            {
+              "inum": "1800.03.1",
+              "name": "https://jans.io/oauth/config/read-all"
+            }
+          ]
+        },
+        {
+          "httpMethods": [
+            "PATCH",
+            "POST",
+            "PUT"
+          ],
+          "scopes": [
+            {
+              "inum": "1800.01.91",
+              "name": "https://jans.io/oauth/config/session.write"
+            }
+          ],
+          "groupScopes": [
+            {
+              "inum": "1800.02.2",
+              "name": "https://jans.io/oauth/config/openid-write"
+            }
+          ],
+          "superScopes": [
+            {
+              "inum": "1800.03.2",
+              "name": "https://jans.io/oauth/config/write-all"
+            }
+          ]
+        },
+        {
+          "httpMethods": [
+            "DELETE"
+          ],
+          "scopes": [
+            {
+              "inum": "1800.01.92",
+              "name": "https://jans.io/oauth/config/session.delete"
+            }
+          ],
+          "groupScopes": [
+            {
+              "inum": "1800.02.3",
+              "name": "https://jans.io/oauth/config/openid-delete"
+            }
+          ],
+          "superScopes": [
+            {
+              "inum": "1800.03.3",
+              "name": "https://jans.io/oauth/config/delete-all"
+            }
+          ]
+        }
+      ]
     }
   ]
 }
