chore: update labels in fido2 page (#9585)
chore: update labels #9544

Signed-off-by: jgomer2001 <bonustrack310@gmail.com>
Co-authored-by: Mohammad Abudayyeh <47318409+moabu@users.noreply.github.com>

--- a/jans-casa/app/src/main/resources/labels/user.properties
+++ b/jans-casa/app/src/main/resources/labels/user.properties
@@ -21,18 +21,16 @@ usr.mfa_onoff=Turn on and off second factor authentication (2FA):
 usr.mfa_notenough=You cannot turn on 2FA until you register at least {0} credentials. Use the widgets below.
 
 #fido 2 security keys
-usr.fido2_label=Security key and Platform Authenticators
-usr.fido2_title=Security Keys and built-in Platform Authenticators
-usr.fido2_text=Protect your online account against unauthorized access by using two-factor authentication with Security keys (USB / NFC) and built-in Platform authenticators (Apple's PassKey).
-usr.fido2_buy_title=Buy keys from <a href="${usr.fido2_buy_link1}" target="_blank">Amazon</a> or <a href="${usr.fido2_buy_link2}" target="_blank">Yubico</a>
+usr.fido2_label=Passkeys
+usr.fido2_title=Passkeys
+usr.fido2_text=
+#Protect your online account against unauthorized access by using two-factor authentication with Security keys (USB / NFC) and built-in Platform authenticators (Apple's PassKey).
+
+usr.fido2_buy_title=Buy security keys from <a href="${usr.fido2_buy_link1}" target="_blank">Amazon</a> or <a href="${usr.fido2_buy_link2}" target="_blank">Yubico</a>
 usr.fido2_buy_link1=https://www.amazon.com/fido2/s?k=fido2
 usr.fido2_buy_link2=https://www.yubico.com/store
 
-usr.fido2_label.security.key=Security key 
-usr.fido2_title.security.key=Security Keys and built-in Platform Authenticators
-usr.fido2_text.security.key=Protect your online accounts against unauthorized access by using 2 factor authentication with Security keys (USB / NFC) and built-in Platform authenticators (Apple's PassKey).
-
-usr.fido2_manage=Manage security keys
+usr.fido2_manage=Manage passkeys
 usr.fido2_add=Register a security key
 usr.fido2_touch=Touch your key button
 usr.fido2_pressready=Insert your security key and press the "${general.ready}" button below
