--- a/jans-cedarling/cedarling/Cargo.toml
+++ b/jans-cedarling/cedarling/Cargo.toml
@@ -9,3 +9,5 @@ serde_json = { workspace = true }
 thiserror = { workspace = true }
 sparkv = { workspace = true }
 uuid7 = { version = "1.1.0", features = ["serde", "uuid"] }
+cedar-policy = "4.0.0"
+base64 = "0.22.1"
