--- a/jans-cedarling/Cargo.toml
+++ b/jans-cedarling/Cargo.toml
@@ -1,12 +1,13 @@
 [workspace]
 resolver = "2"
-members = ["cedarling", "sparkv"]
+members = ["bindings/*", "cedarling", "sparkv"]
 
 [workspace.dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0"
 sparkv = { path = "sparkv" }
+cedarling = { path = "cedarling" }
 
 
 [profile.release]
