chore: skip plugin build  (#9594)
* chore: skip plugin build #9591

Signed-off-by: jgomer2001 <bonustrack310@gmail.com>

* fix: adjust supported casa plugins

Signed-off-by: Mohammad Abudayyeh <47318409+moabu@users.noreply.github.com>

* chore: remove agama project from plugin entry

Signed-off-by: Mohammad Abudayyeh <47318409+moabu@users.noreply.github.com>

---------

Signed-off-by: jgomer2001 <bonustrack310@gmail.com>
Signed-off-by: Mohammad Abudayyeh <47318409+moabu@users.noreply.github.com>
Co-authored-by: Mohammad Abudayyeh <47318409+moabu@users.noreply.github.com>

--- a/jans-casa/pom.xml
+++ b/jans-casa/pom.xml
@@ -67,7 +67,7 @@
         <module>plugins/client-authorizations</module>
         <module>plugins/custom-branding</module>
         <module>plugins/strong-authn-settings</module>
-        <module>plugins/email_2fa_core</module>
+        <!--module>plugins/email_2fa_core</module-->
         <module>plugins/bioid</module>
     </modules>
 
