chore(cloud-native): sync assets and dependencies (#9606)
* chore(cloud-native): sync assets and dependencies

Signed-off-by: iromli <isman.firmansyah@gmail.com>

* chore(cloud-native): update jans-couchbase.properties template

Signed-off-by: iromli <isman.firmansyah@gmail.com>

* fix: remove admin group

Signed-off-by: iromli <isman.firmansyah@gmail.com>

* fix: remove references to unused admin group

Signed-off-by: iromli <isman.firmansyah@gmail.com>

* chore(cloud-native): sync upstream assets

Signed-off-by: iromli <isman.firmansyah@gmail.com>

---------

Signed-off-by: iromli <isman.firmansyah@gmail.com>

--- a/docker-jans-auth-server/templates/jans-couchbase.properties
+++ b/docker-jans-auth-server/templates/jans-couchbase.properties
@@ -1,5 +1,9 @@
 servers: %(hostname)s
 
+# Waits specified number of seconds until SDK bootstrap is complete and the desired ClusterState is observed
+# Default waitUntilReady is -1 which means that it's turned off
+connection.wait-until-ready-time: -1
+
 # The connect timeout is used when a Bucket is opened.
 # If you feel the urge to change this value to something higher, there is a good chance that your network is not properly set up.
 # Connecting to the server should in practice not take longer than a second on a reasonably fast network.
