--- a/docker-jans-fido2/templates/jans-couchbase.properties
+++ b/docker-jans-fido2/templates/jans-couchbase.properties
@@ -1,5 +1,9 @@
 servers: %(hostname)s
 
+# Waits specified number of seconds until SDK bootstrap is complete and the desired ClusterState is observed
+# Default waitUntilReady is -1 which means that it's turned off
+connection.wait-until-ready-time: -1
+
 # The connect timeout is used when a Bucket is opened.
 # If you feel the urge to change this value to something higher, there is a good chance that your network is not properly set up.
 # Connecting to the server should in practice not take longer than a second on a reasonably fast network.
