feat(jans-cedarling): add type hints for cedarling_python (#9725)
* feat(jans-cedarling): add type hints for cedarling_python

Signed-off-by: Oleh Bohzok <olehbozhok@gmail.com>

* chore(jans-cedarling): fix mypy errors

Signed-off-by: Oleh Bohzok <olehbozhok@gmail.com>

* chore(jans-cedarling): remove from tox.ini python version lower than 3.10

Signed-off-by: Oleh Bohzok <olehbozhok@gmail.com>

---------

Signed-off-by: Oleh Bohzok <olehbozhok@gmail.com>

--- a/jans-cedarling/bindings/cedarling_python/tox.ini
+++ b/jans-cedarling/bindings/cedarling_python/tox.ini
@@ -1,6 +1,6 @@
 # tox.ini
 [tox]
-envlist = py313, py312, py311, py310, py39, py38  # Python versions to test
+envlist = py313, py312, py311, py310  # Python versions to test
 
 # Define default environment for testing
 [testenv]
