--- a/jans-cedarling/cedarling/Cargo.toml
+++ b/jans-cedarling/cedarling/Cargo.toml
@@ -14,7 +14,10 @@ base64 = "0.22.1"
 url = "2.5.2"
 lazy_static = "1.5.0"
 di = { workspace = true }
+jsonwebtoken = "9.3.0"
 
 [dev-dependencies]
 # is used in testing
 test_utils = { workspace = true }
+rand = "0.8.5"
+jsonwebkey = { version = "0.3.5", features = ["generate", "jwt-convert"] }
