--- a/jans-cedarling/bindings/cedarling_python/Cargo.toml
+++ b/jans-cedarling/bindings/cedarling_python/Cargo.toml
@@ -10,5 +10,6 @@ crate-type = ["cdylib"]
 [dependencies]
 pyo3 = { version = "0.22.0", features = ["extension-module"] }
 cedarling = { workspace = true }
+serde = { workspace = true }
 serde_json = { workspace = true }
 serde-pyobject = "0.4.0"
