ci(jans-cedarling): testcase workflow (#9853)
* ci(jans-cedarling): testcase workflow

Signed-off-by: SafinWasi <6601566+SafinWasi@users.noreply.github.com>

* ci: fix typo

Signed-off-by: SafinWasi <6601566+SafinWasi@users.noreply.github.com>

* ci: add cargo clippy

* ci: continue on error

* ci: organize exit on error

---------

Signed-off-by: SafinWasi <6601566+SafinWasi@users.noreply.github.com>
Co-authored-by: Mohammad Abudayyeh <47318409+moabu@users.noreply.github.com>

--- a/jans-cedarling/bindings/cedarling_python/tox.ini
+++ b/jans-cedarling/bindings/cedarling_python/tox.ini
@@ -1,12 +1,12 @@
 # tox.ini
 [tox]
-envlist = py313, py312, py311, py310  # Python versions to test
+envlist = py311, py310  # Python versions to test
 
 # Define default environment for testing
 [testenv]
 deps =
-    maturin        # maturin to build the Rust extension
-    pytest         # pytest to run the tests
+    maturin[patchelf]        # maturin to build the Rust extension
+    pytest                   # pytest to run the tests
 
 # Build the Rust library and install it in the virtualenv, then run tests
 commands =
