--- a/jans-cedarling/Cargo.toml
+++ b/jans-cedarling/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = ["bindings/*", "cedarling", "di", "sparkv", "test_utils"]
+members = ["bindings/*", "cedarling", "sparkv", "test_utils"]
 
 [workspace.dependencies]
 serde = { version = "1.0", features = ["derive"] }
@@ -8,7 +8,6 @@ serde_json = "1.0"
 thiserror = "1.0"
 sparkv = { path = "sparkv" }
 cedarling = { path = "cedarling" }
-di = { path = "di" }
 test_utils = { path = "test_utils" }
 
 
