--- a/jans-cedarling/cedarling/Cargo.toml
+++ b/jans-cedarling/cedarling/Cargo.toml
@@ -13,8 +13,8 @@ cedar-policy = "4.0.0"
 base64 = "0.22.1"
 url = "2.5.2"
 lazy_static = "1.5.0"
-di = { workspace = true }
 jsonwebtoken = "9.3.0"
+typed-builder = "0.20.0"
 
 [dev-dependencies]
 # is used in testing
