feat: simplify JSON value in MySQL (#9886)
* feat(jans-orm): allow skip v node in MySQL

Signed-off-by: Yuriy Movchan <Yuriy.Movchan@gmail.com>

* fix(jans-linux-setup): skip v node in MySQL

Signed-off-by: Mustafa Baser <mbaser@mail.com>

* feat(jans-orm): allow skip v node in MySQL

Signed-off-by: Yuriy Movchan <Yuriy.Movchan@gmail.com>

* feat(jans-orm): allow skip v node in MySQL

Signed-off-by: Yuriy Movchan <Yuriy.Movchan@gmail.com>

* feat(jans-orm): allow skip v node in MySQL

Signed-off-by: Yuriy Movchan <Yuriy.Movchan@gmail.com>

---------

Signed-off-by: Yuriy Movchan <Yuriy.Movchan@gmail.com>
Signed-off-by: Mustafa Baser <mbaser@mail.com>
Co-authored-by: Mustafa Baser <mbaser@mail.com>

--- a/jans-linux-setup/jans_setup/templates/jans-mysql.properties
+++ b/jans-linux-setup/jans_setup/templates/jans-mysql.properties
@@ -41,3 +41,5 @@ connection.pool.min-evictable-idle-time-millis=1800000
 
 binaryAttributes=objectGUID
 certificateAttributes=userCertificate
+
+mysql.simple-json=true
