--- a/charts/janssen-all-in-one/templates/secret.yaml
+++ b/charts/janssen-all-in-one/templates/secret.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.cnConfiguratorCustomSchema.secretName -}}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -60,6 +61,7 @@ stringData:
         "encoded_salt": {{ .Values.salt | quote }}
       }
     }
+{{- end }}
 
 {{- if .Values.saml.enabled }}
 ---
