--- a/charts/janssen/charts/config-api/templates/deployment.yaml
+++ b/charts/janssen/charts/config-api/templates/deployment.yaml
@@ -96,9 +96,9 @@ spec:
             - name: {{ include "config-api.name" . }}-updatelbip
               mountPath: /scripts
             {{- end }}
-            - mountPath: {{ .Values.global.cnConfiguratorConfigurationFile }}
-              name: {{ .Release.Name }}-configuration-file
-              subPath: {{ .Values.global.cnConfiguratorConfigurationFile | base }}
+          {{- with (include "cn.config.schema" . | fromYaml).volumeMounts }}
+{{- toYaml . | nindent 12 }}
+          {{- end }}
           {{- if .Values.global.cloud.testEnviroment }}
           resources: {}
           {{- else }}
@@ -114,9 +114,9 @@ spec:
           configMap:
             name: {{ .Release.Name }}-updatelbip
         {{- end }}
-        - name: {{ .Release.Name }}-configuration-file
-          secret:
-            secretName: {{ .Release.Name }}-configuration-file
+      {{- with (include "cn.config.schema" . | fromYaml).volumes }}
+{{- toYaml . | nindent 8 }}
+      {{- end }}
       {{- if not .Values.global.isFqdnRegistered  }}
       hostAliases:
       - ip: {{ .Values.global.lbIp }}
