--- a/charts/janssen/charts/scim/templates/deployment.yml
+++ b/charts/janssen/charts/scim/templates/deployment.yml
@@ -106,9 +106,9 @@ spec:
           - name: {{ include "scim.fullname" .}}-updatelbip
             mountPath: "/scripts"
         {{- end }}
-          - mountPath: {{ .Values.global.cnConfiguratorConfigurationFile }}
-            name: {{ .Release.Name }}-configuration-file
-            subPath: {{ .Values.global.cnConfiguratorConfigurationFile | base }}
+        {{- with (include "cn.config.schema" . | fromYaml).volumeMounts }}
+{{- toYaml . | nindent 10 }}
+        {{- end }}
         livenessProbe:
 {{- toYaml .Values.livenessProbe | nindent 10 }}
         readinessProbe:
@@ -128,6 +128,6 @@ spec:
           configMap:
             name: {{ .Release.Name }}-updatelbip
       {{- end }}
-        - name: {{ .Release.Name }}-configuration-file
-          secret:
-            secretName: {{ .Release.Name }}-configuration-file
+      {{- with (include "cn.config.schema" . | fromYaml).volumes }}
+{{- toYaml . | nindent 8 }}
+      {{- end }}
