--- a/charts/janssen/values.yaml
+++ b/charts/janssen/values.yaml
@@ -1191,6 +1191,10 @@ global:
   cnConfiguratorConfigurationFile: /etc/jans/conf/configuration.json
   # -- Path to dumped configuration schema file
   cnConfiguratorDumpFile: /etc/jans/conf/configuration.out.json
+  # -- Use custom configuration schema in existing secrets. Note, the secrets has to contain the key configuration.json or any basename as specified in cnConfiguratorConfigurationFile.
+  cnConfiguratorCustomSchema:
+    # -- The name of the secrets used for storing custom configuration schema.
+    secretName: ""
 
 # -- Nginx ingress definitions chart
 nginx-ingress:
