--- a/charts/janssen-all-in-one/templates/deployment.yml
+++ b/charts/janssen-all-in-one/templates/deployment.yml
@@ -93,9 +93,9 @@ spec:
         {{- with .Values.volumeMounts }}
 {{- toYaml . | nindent 10 }}
         {{- end }}
-          - mountPath: {{ .Values.cnConfiguratorConfigurationFile }}
-            name: {{ .Release.Name }}-configuration-file
-            subPath: {{ .Values.cnConfiguratorConfigurationFile | base }}
+        {{- with (include "janssen-all-in-one.config.schema" . | fromYaml).volumeMounts }}
+{{- toYaml . | nindent 10 }}
+        {{- end }}
           - mountPath: /scripts/tls_generator.py
             name: {{ include "janssen-all-in-one.name" . }}-tls-script
             subPath: tls_generator.py
@@ -129,9 +129,9 @@ spec:
       {{- with .Values.volumes }}
 {{- toYaml . | nindent 8 }}
       {{- end }}
-        - name: {{ .Release.Name }}-configuration-file
-          secret:
-            secretName: {{ .Release.Name }}-configuration-file
+      {{- with (include "janssen-all-in-one.config.schema" . | fromYaml).volumes }}
+{{- toYaml . | nindent 8 }}
+      {{- end }}
         - name: {{ include "janssen-all-in-one.name" . }}-tls-script
           configMap:
             name: {{ include "janssen-all-in-one.fullname" . }}-tls-script
