--- a/charts/janssen/charts/link/templates/deployment.yaml
+++ b/charts/janssen/charts/link/templates/deployment.yaml
@@ -95,9 +95,9 @@ spec:
             - name: {{ include "link.name" . }}-updatelbip
               mountPath: /scripts
             {{- end }}
-            - mountPath: {{ .Values.global.cnConfiguratorConfigurationFile }}
-              name: {{ .Release.Name }}-configuration-file
-              subPath: {{ .Values.global.cnConfiguratorConfigurationFile | base }}
+          {{- with (include "cn.config.schema" . | fromYaml).volumeMounts }}
+{{- toYaml . | nindent 12 }}
+          {{- end }}
           {{- if .Values.global.cloud.testEnviroment }}
           resources: {}
           {{- else }}
@@ -113,9 +113,9 @@ spec:
           configMap:
             name: {{ .Release.Name }}-updatelbip
         {{- end }}
-        - name: {{ .Release.Name }}-configuration-file
-          secret:
-            secretName: {{ .Release.Name }}-configuration-file
+      {{- with (include "cn.config.schema" . | fromYaml).volumes }}
+{{- toYaml . | nindent 8 }}
+      {{- end }}
       {{- if not .Values.global.isFqdnRegistered  }}
       hostAliases:
       - ip: {{ .Values.global.lbIp }}
