--- a/charts/janssen/charts/persistence/templates/jobs.yml
+++ b/charts/janssen/charts/persistence/templates/jobs.yml
@@ -80,15 +80,15 @@ spec:
           {{- with .Values.volumeMounts }}
 {{- toYaml . | nindent 10 }}
           {{- end }}
-          - mountPath: {{ .Values.global.cnConfiguratorConfigurationFile }}
-            name: {{ .Release.Name }}-configuration-file
-            subPath: {{ .Values.global.cnConfiguratorConfigurationFile | base }}
+          {{- with (include "cn.config.schema" . | fromYaml).volumeMounts }}
+  {{- toYaml . | nindent 10 }}
+          {{- end }}
         resources:
 {{- toYaml .Values.resources | nindent 10 }}
       volumes:
       {{- with .Values.volumes }}
 {{- toYaml . | nindent 8 }}
       {{- end }}
-        - name: {{ .Release.Name }}-configuration-file
-          secret:
-            secretName: {{ .Release.Name }}-configuration-file
+      {{- with (include "cn.config.schema" . | fromYaml).volumes }}
+{{- toYaml . | nindent 8 }}
+      {{- end }}
