--- a/jans-casa/app/pom.xml
+++ b/jans-casa/app/pom.xml
@@ -169,11 +169,11 @@
             <artifactId>zel</artifactId>
             <version>${zk.version}</version>
         </dependency>
-        <dependency>
+        <!--dependency>
             <groupId>org.zkoss.theme</groupId>
             <artifactId>breeze</artifactId>
             <version>9.6.0.2</version>
-        </dependency>
+        </dependency-->
 
         <!-- LOGGING -->
         <dependency>
